--- a/src/index.css
+++ b/src/index.css
@@ -27,8 +27,10 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  width: 100%; 
   min-width: 320px;
   min-height: 100vh;
+  justify-content: center;
 }
 
 h1 {
